# audditAI

./: README.md  package.json  vercel.json
ausk/: .gitignore  Cargo.toml  docker-compose.backend.yml  docker-compose.yml
ausk/backend/: README.md  pytest.ini  requirements.txt
ausk/billing/: Cargo.toml
ausk/config/: rules.yaml
ausk/docker/: Dockerfile.billing  Dockerfile.ingestor  Dockerfile.vault  Dockerfile.web  DownloadModel.sh
ausk/docs/: DEPLOY.md
ausk/ledger-seal/: Cargo.toml
ausk/new landing page/: index.html
ausk/scripts/: web-dev.sh
ausk/sql/: 0001_init.sql  0002_ai_governance.sql  0004_billing_orgs.sql
ausk/web/: .gitignore  .npmrc  APPLY_RLS_FIX.sql  APPLY_THIS_SCHEMA.sql  AUTHENTICATION_SECURITY_ANALYSIS.md  BACKEND_INTEGRATION_STATUS.md  COMPREHENSIVE_MISSING_FEATURES_ANALYSIS.md  DATABASE_VERIFICATION.sql  DEBUG_AUTH_FLOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_TEST_CHECKLIST.md  Dockerfile  FINAL_DATABASE_FIX.sql  MISSING_FEATURES_ANALYSIS.md  MVP_DEPLOYMENT_COMPLETE.md  PRODUCTION_ENV_VARS.txt  SCHEMA_DEPLOYMENT_GUIDE.txt  SUPABASE_AUTH_SETUP.txt  SUPABASE_STORAGE_SETUP.sql  URGENT_FIX_PROFILE.sql  complete-rls-fix.sql  debug-profile.sql  fix-rls-policies.sql  fix-user-profile.sql  middleware.ts  package.json  tailwind.config.js
crossaudit/: .env  .env.example  Makefile  docker-compose.backend.yml  docker-compose.yml
crossaudit/backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
crossaudit/billing/: Cargo.toml
crossaudit/docker/: Dockerfile.gateway  Dockerfile.ledger-seal
crossaudit/docs/: API.md  DEPLOY.md  SECURITY.md
crossaudit/gateway/: Cargo.toml
crossaudit/gateway/src/: audit.rs  config.rs  data_room.rs  lib.rs  llm_client.rs  main.rs  metrics.rs  routes.rs  storage.rs
crossaudit/gateway/tests/: data_room.rs  e2e.rs  e2e_rewrite.rs
crossaudit/ingestor/: Cargo.toml
crossaudit/ingestor/src/: lib.rs  main.rs
crossaudit/vault/: Cargo.toml
crossaudit/vault/src/: main.rs
(+400 files in other folders)
