[package]
name = "crossaudit-gateway"
version = "1.0.0"
edition = "2021"

[features]
default = ["local_model"]
local_model = []

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
tonic = "0.11"
hyper = "1.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
pgvector = { version = "0.3", features = ["postgres"] }
deadpool-postgres = "0.13"
regex-automata = "0.4"
regex = "1"
pest = { version = "2.7", features = ["derive"] }
llama-rs = { version = "0.5", optional = true, default-features = false, features = ["cublas"] }
prometheus-client = "0.22"
tower = "0.4"
tower-http = "0.5"
governor = "0.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["rt-tokio"] }
once_cell = "1"
clap = { version = "4", features = ["derive"] }
tokio-stream = "0.1"
