[package]
name = "crossaudit-ingestor"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
anyhow = "1.0"
