[package]
name = "crossaudit-vault"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deadpool-postgres = "0.13"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1", features = ["serde", "v4"] }
